Completed method description

--- a/ode_methods.ipynb
+++ b/ode_methods.ipynb
@@ -6,6 +6,15 @@
     "collapsed": false
    },
    "source": [
+    "# CW10: Ordinary Differential Equations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
     "Notes:\n",
     "\n",
     "- solution to a differential equation is a function or set of functions\n",
@@ -19,7 +28,7 @@
     "collapsed": false
    },
    "source": [
-    "Solving differential equation with initial condition:\n",
+    "Solving a differential equation with initial condition:\n",
     "\n",
     "$dy/dx = cos(x)$ $y(0) = -1$"
    ]
@@ -88,8 +97,28 @@
    },
    "source": [
     "2nd-order Runge-Kutta Method:\n",
-    "\n",
-    "- "
+    "- Slope $K_1$ is halved to obtain a midpoint. This midpoint yeilds another slope, approximating point $K_2$. This differs from Heun's method because slopes of points are used rather than tangent lines."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "4th-order Runge-Kutta Method:\n",
+    "- $K_1$ is the linear approximation of the difference between $u_{k+1}$ and $u_{k}$. $K_2$ is the linear approximation using $\\Delta t/2$ between $K_1$. $K_3$ uses the slope of $K_2$ stopping at $\\Delta t/2$. $K_4$ is found similarly to $K_3$, using the slope of $K_3$ instead of $K_2$. A more detailed description of the graph is given by the two midpoints versus endpoints. The midpoints allow us to determine any nonlinearity in the function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
    ]
   }
  ],
