--- a/ode_methods.ipynb
+++ b/ode_methods.ipynb
@@ -89,7 +89,22 @@
    "source": [
     "2nd-order Runge-Kutta Method:\n",
     "\n",
-    "- "
+    "- Euler's Method uses the first order in the Taylor expansion, while 2nd order Runge-Kutta Method uses the higher orders in a Taylor expansion. \n",
+    "- 2nd order gives a smaller error than the other methods, however 4th order RK is most commonly used for the best approximation with a smaller error\n",
+    "$f(t+\\Delta t)=\\Delta t(f(t,y(t)+f_t(t,y(t))\\alpha \\Delta t +f_y(t, y(t)) \\beta k_1(t)+ {O}(\\Delta t)^2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "4th-order Runge-Kutta Method:\n",
+    "\n",
+    "- 4th order RK Method requires four evaluations of the function f per $\\Delta t$\n",
+    "- This Method is most commonly used as the most reliable for an accurate approximation\n",
+    "$f(t + \\Delta t) = t + \\Delta t[(f(t_n, t))/6 + (f(t_n + \\Delta t/2, t+ (\\Delta t)/2 k_1)/3) + f(t_n + \\Delta t/2, t + \\Delta t /2k_2)/3 + f(t_n+ \\Delta t, t + \\Delta t k_3)/6]$"
    ]
   }
  ],
